unpackaged/post_comexi/objects/Contract/fields/COMEXI_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Contract_Value__c</fullName>
    <description>Importe contratado, heredado del total de la oferta origen. Contract no trae importe de cabecera propio, asi que sin este campo el contrato no dice cuanto vale.</description>
    <inlineHelpText>Importe total contratado.</inlineHelpText>
    <label>Valor del contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>