unpackaged/post_comexi/objects/Contract/fields/COMEXI_Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Amount__c</fullName>
    <description>Importe del anticipo derivado del porcentaje y del valor contratado. Es la cifra que hoy se persigue por correo y que aqui queda fijada en el contrato.</description>
    <formula>IF(ISBLANK(COMEXI_Down_Payment_Pct__c), 0, COMEXI_Contract_Value__c * COMEXI_Down_Payment_Pct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Importe del anticipo (calculado).</inlineHelpText>
    <label>Anticipo (importe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>