unpackaged/post_comexi/objects/Contract/fields/COMEXI_Down_Payment_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Pct__c</fullName>
    <description>Porcentaje de anticipo pactado (30% en el escenario). Es la condicion que se convierte en hito de facturacion y que bloquea el arranque de ingenieria.</description>
    <inlineHelpText>Porcentaje de anticipo pactado.</inlineHelpText>
    <label>Anticipo %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>