unpackaged/post_comexi/objects/Contract/fields/COMEXI_Expenses_Owner__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Expenses_Owner__c</fullName>
    <description>Indica a cargo de quien van los gastos de desplazamiento y estancia. Es la palanca de negociacion que hoy vive como una casilla en la pestana de intervencion del Excel.</description>
    <inlineHelpText>A cargo de quien van los gastos de desplazamiento.</inlineHelpText>
    <label>Gastos a cargo de</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comexi</fullName>
                <default>true</default>
                <label>Comexi</label>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Compartido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>