unpackaged/post_comexi/objects/Contract/fields/COMEXI_Generated_By_Advisor__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Generated_By_Advisor__c</fullName>
    <description>Marca los contratos cuya cadena arranco en el COMEXI Retrofit Advisor. Es tambien la bandera que usa COMEXI_ContractTrigger para no tocar contratos ajenos a la demo.</description>
    <inlineHelpText>Marcado si la cadena la origino el Retrofit Advisor.</inlineHelpText>
    <label>Generado por el Advisor</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>