unpackaged/post_comexi/objects/Contract/fields/COMEXI_Intervention_Country__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Country__c</fullName>
    <description>Pais donde se ejecuta la intervencion. Es el dato que en el proceso actual decide el idioma del documento y la existencia de representante local.</description>
    <inlineHelpText>Pais donde se ejecuta la intervencion.</inlineHelpText>
    <label>Pais de intervencion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>