unpackaged/post_comexi/objects/Contract/fields/COMEXI_Intervention_Hours__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Hours__c</fullName>
    <description>Horas totales de intervencion contratadas (montaje mecanico, instalacion electrica y puesta en marcha). Resume en la cabecera lo que las lineas desglosan una a una.</description>
    <inlineHelpText>Horas totales de intervencion contratadas.</inlineHelpText>
    <label>Horas de intervencion</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>