unpackaged/post_comexi/objects/Contract/fields/COMEXI_Intervention_Site__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Site__c</fullName>
    <description>Planta del cliente donde se ejecuta la intervencion contratada (Leeds en el escenario). Determina los gastos de desplazamiento y estancia comprometidos.</description>
    <inlineHelpText>Planta donde se ejecuta la intervencion.</inlineHelpText>
    <label>Planta de intervencion</label>
    <length>120</length>
    <type>Text</type>
</CustomField>