unpackaged/post_comexi/objects/Contract/fields/COMEXI_Intervention_Weeks__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Weeks__c</fullName>
    <description>Semanas de plazo comprometidas en el contrato, equivalentes al planificador de 6 semanas que COMEXI mantiene hoy en Excel.</description>
    <inlineHelpText>Plazo comprometido en semanas.</inlineHelpText>
    <label>Plazo (semanas)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>