unpackaged/post_comexi/objects/Contract/fields/COMEXI_Machine_Model__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Machine_Model__c</fullName>
    <description>Modelo de la maquina objetivo, traido del Asset. Evita reteclear el modelo y mantiene el dato sincronizado con la maquina instalada.</description>
    <formula>IF(ISBLANK(COMEXI_Target_Asset__r.COMEXI_Machine_Model__c), &apos;&apos;, COMEXI_Target_Asset__r.COMEXI_Machine_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Modelo de la maquina (calculado desde el Asset).</inlineHelpText>
    <label>Modelo de maquina</label>
    <type>Text</type>
</CustomField>