unpackaged/post_comexi/objects/Contract/fields/COMEXI_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Payment_Terms__c</fullName>
    <description>Condiciones de pago pactadas para el saldo posterior al anticipo (Net 30 en el escenario). Se hereda de la oferta aprobada para que contrato y oferta no discrepen.</description>
    <inlineHelpText>Condiciones de pago del saldo.</inlineHelpText>
    <label>Condiciones de pago</label>
    <length>80</length>
    <type>Text</type>
</CustomField>