unpackaged/post_comexi/objects/Contract/fields/COMEXI_Retrofit_SKU__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Retrofit_SKU__c</fullName>
    <description>Referencia del retrofit contratado (T100 - UPDATE PC en el escenario). Es el identificador que el cliente reconoce y el que aparece en el documento contractual.</description>
    <inlineHelpText>Referencia del retrofit contratado.</inlineHelpText>
    <label>SKU del retrofit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>