unpackaged/post_comexi/objects/Contract/fields/COMEXI_Source_Case__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso de servicio que origino la cadena caso - oportunidad - oferta - contrato. Contract no trae ningun campo estandar hacia Case, y sin el el contrato pierde la trazabilidad hasta el correo de entrada del cliente.</description>
    <inlineHelpText>Caso desde el que nacio este contrato.</inlineHelpText>
    <label>Caso de origen</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contratos de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>