unpackaged/post_comexi/objects/Contract/fields/COMEXI_Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad de retrofit de la que procede el contrato. El estandar SourceQuoteId solo llega hasta la oferta, asi que sin este campo hay que navegar a la oferta para saber de que oportunidad se trata.</description>
    <inlineHelpText>Oportunidad de la que procede este contrato.</inlineHelpText>
    <label>Oportunidad de origen</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contratos de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>