unpackaged/post_comexi/objects/Contract/fields/COMEXI_Target_Asset__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Target_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Maquina instalada sobre la que se ejecuta el retrofit contratado (MSC000600, Comexi Proslit S2 DS). Permite que el contrato hable de la maquina concreta y que desde la maquina se vea que contratos la afectan.</description>
    <inlineHelpText>Maquina instalada objeto de este contrato.</inlineHelpText>
    <label>Maquina objetivo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contratos de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>