unpackaged/post_comexi/objects/Contract/fields/COMEXI_Target_Intervention_Date__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Target_Intervention_Date__c</fullName>
    <description>Fecha comprometida de intervencion en planta. Es el compromiso que hoy vive en el planificador de operaciones y que aqui queda en el contrato firmado.</description>
    <inlineHelpText>Fecha comprometida de intervencion en planta.</inlineHelpText>
    <label>Fecha objetivo de intervencion</label>
    <type>Date</type>
</CustomField>