unpackaged/post_comexi/objects/Contract/fields/COMEXI_Warranty_Months__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Warranty_Months__c</fullName>
    <description>Duracion de la garantia en meses. COMEXI trabaja con 6 meses contados desde la aceptacion de la intervencion, no desde la entrega.</description>
    <inlineHelpText>Duracion de la garantia en meses.</inlineHelpText>
    <label>Garantia (meses)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>