unpackaged/post_comexi/objects/Contract/fields/COMEXI_Warranty_Start_Event__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Warranty_Start_Event__c</fullName>
    <description>Hecho que dispara el computo de la garantia. En COMEXI es la aceptacion de la intervencion, un matiz que hoy solo conocen quienes han leido la oferta entera.</description>
    <inlineHelpText>Hecho desde el que se cuenta la garantia.</inlineHelpText>
    <label>Inicio de la garantia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceptacion</fullName>
                <default>true</default>
                <label>Aceptacion de la intervencion</label>
            </value>
            <value>
                <fullName>Entrega</fullName>
                <label>Entrega del material</label>
            </value>
            <value>
                <fullName>Firma</fullName>
                <label>Firma del contrato</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>